force-app/main/default/objects/ARTL_TaskTypeIP__mdt/ARTL_TaskTypeIP__mdt.object-meta.xml
<CustomObject>
    <description>To check which IP will be called when a task is getting closed</description>
    <label>ARTL_TaskTypeIP</label>
    <pluralLabel>ARTL_TaskTypeIPs</pluralLabel>
</CustomObject>