force-app/main/default/objects/ARTL_TaskTypeIP__mdt/fields/ARTL_Request_Payload_Map__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Request_Payload_Map__c</fullName>
    <label>Request Payload Map</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>