force-app/main/default/objects/ARTL_TaskTypeIP__mdt/fields/ARTL_Technical_Attribute_Map__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Technical_Attribute_Map__c</fullName>
    <label>Technical Attribute Map</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>