force-app/main/default/objects/ARTL_TaskTypeIP__mdt/fields/IP__c.field-meta.xml
<CustomField>
    <fullName>IP__c</fullName>
    <label>IP</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>