force-app/main/default/objects/ARTL_TaskTypeIP__mdt/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PM approval for LoC</fullName>
                <default>true</default>
                <label>PM approval for LoC</label>
            </value>
            <value>
                <fullName>PM NW Jeopardy</fullName>
            </value>
            <value>
                <fullName>PM Workways</fullName>
            </value>
            <value>
                <fullName>PM Approval</fullName>
            </value>
            <value>
                <fullName>RA</fullName>
            </value>
            <value>
                <fullName>PortShut_Unshut</fullName>
            </value>
            <value>
                <fullName>PMWTask</fullName>
            </value>
            <value>
                <fullName>Delivery Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>